first version of introduction chapter

--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,10 @@
 \tableofcontents
 \pagebreak
 
+\onehalfspacing % espaçamento 1.5 entre linhas
+\setlength{\parindent}{20pt} % recuo parágrafo
+\setlength{\parskip}{0em} % espaçamamento entre parágrafos
+
 \include{cap1-introducao}
 \include{cap2-analise-de-requisitos}
 \include{cap3-projeto-conceitual}
@@ -15,7 +19,7 @@
 \newpage
 
 \bibliographystyle{plain}
-\bibliography{Desenvolvimento de ROV}
+\bibliography{brov_bib}
 \addcontentsline{toc}{section}{Referências}
 	
 \end{document}
