--- a/preambulo.tex
+++ b/preambulo.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage{indentfirst}
 \usepackage[portuguese]{babel}
 \usepackage{natbib}
 \usepackage{url}
@@ -9,7 +10,10 @@
 \usepackage{parskip}
 \usepackage{fancyhdr}
 \usepackage{vmargin}
+\usepackage{setspace}
+\usepackage{hyperref}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
+
 
 \title{Relatório I \\ [0.5 cm] Projeto Conceitual}
 
