Start simulation chapter

--- a/cap4-simulacao.tex
+++ b/cap4-simulacao.tex
@@ -1,2 +1,35 @@
-\section{Simulação}
-\label{sec:simulacao}
+\section{Validação de projeto}
+\label{sec:validacao}
+
+Ao longo do texto, definiu-se os requisitos e como os atingi-los, porém ainda é
+preciso estabelecer como ocorrerá a prova do cumprimento do que foi acordado.
+Para isso, nessa seção serão propostos alguns testes que são capazes de validar
+o cumprimento dos requisitos. Essa etapa de validação poderia ser executada
+somente após o desenvolvimento do protótipo, contudo, quaisquer modificações
+de projeto com o protótipo já finalizado acrescentaria em um grande custo de
+financeiro e em atraso de projeto. Dessa forma, optou-se pela validação do
+protótipo via simulação, o que permite testar o veículo em ambiente subaquático
+simulado, sem risco de dano ao veículo e evitando grandes retrabalhos por
+modificações no projeto. Nessa seção, será discutido como a simulação deve ser
+realizada para validação dos requitos de projeto, assim como a configuração do
+ambiente virtual submarino.
+
+\subsection{Módulos de simulação}
+\label{sec:simu-modules}
+
+A simulação fidedigna de um veículo submarino deve contar com a simulação dos
+atuadores, sensores, da física de um corpo rígido debaixo d'água e dos códigos
+no veículo. Com o objetivo de obter uma simualação que incluisse todos esses
+tópicos, algumas soluções de software disponíveis foram adotas e algumas
+desenvolvidas, a especificação de cada uma e justificativa de escolha é o
+objetivo desta seção.
+
+\subsubsection{Sensores, atuadores e colisão}
+O principal \it{software} a ser utilizado para simulação é o Gazebo \cite[gazebo].
+
+
+\subsubsection{Hidrodinâmica e Hidroestática do Submarino}
+
+\subsubsection{Comunicação Acústica}
+
+\subsection{Missões}
