update file format, chap 1 and chap 3

--- a/cap1-introducao.tex
+++ b/cap1-introducao.tex
@@ -10,7 +10,18 @@ A comunicação subaquática por ondas RF permite uma transição suave entre a 
 
 A comunicação ótica sem fio subaquática (UOWC, do inglês \textit{Underwater Optical Wireless Communication}) possui, dentre os métodos supracitados, a maior taxa de transmissão, a menor latência e o menor custo de implementação. Por outro lado, o sinal ótico é alterado por conta de absorção e dispersão, demanda alinhamento preciso dos transceptores e possui alcance moderado (da ordem de dezenas de metros) \cite{Ur-Rehman2018}.
 
-Diante desse cenário, a proposta desse trabalho é implementar, em ambiente de simulação, algoritmos de comunicação embarcados em um veículo submarino remotamente operado (ROV, do inglês Remotely Operated Underwater Vehicle), que deverá ser projetado para realizar uma operação de resgate. Para cumprir esse objetivo, o trabalho será dividido em três relatórios:
+Diante desse cenário, o objetivo geral desse trabalho é implementar, em ambiente de simulação, algoritmos de comunicação embarcados em um veículo submarino remotamente operado (ROV, do inglês \textit{Remotely Operated Underwater Vehicle}), que deverá ser projetado para realizar uma operação de resgate de um objeto qualquer.
+
+Os objetivos específicos do trabalho são:
+\begin{enumerate}
+	\item Projetar um ROV para atuação em uma missão de resgate, com requisitos de funcionamento pré-estabelecidos.
+	\item Desenvolver e implementar, em ambiente simulado, algoritmos de comunicação subaquática.
+	\item Simular comportamento dinâmico, localização, navegação e comunicação do ROV.
+\end{enumerate}
+
+O escopo do trabalho está restrito à entrega de três relatórios, desenhos 3D e de fabricação e algoritmos desenvolvidos. A prototipação física, assim como testes experimentais do ROV em piscina ou mar estão fora do escopo desse trabalho.
+
+A divisão dos relatórios será feita da seguinte maneira:
 \vspace{1.5mm}
 
 \begin{enumerate}
