--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,10 @@
 
 \tableofcontents
 \pagebreak
+\listoffigures
+\pagebreak
+\listoftables
+\pagebreak
 
 \onehalfspacing % espaçamento 1.5 entre linhas
 \setlength{\parindent}{20pt} % recuo parágrafo
@@ -18,7 +22,7 @@
 
 \newpage
 
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{brov_bib}
 \addcontentsline{toc}{section}{Referências}
 	
