--- a/preambulo.tex
+++ b/preambulo.tex
@@ -13,8 +13,7 @@
 \usepackage{setspace}
 \usepackage{hyperref}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
-
-
+\numberwithin{figure}{section}
 \title{Relatório I \\ [0.5 cm] Projeto Conceitual}
 
 \makeatletter
