Add missions to simulation chapter

--- a/brov_bib.bib
+++ b/brov_bib.bib
@@ -78,3 +78,21 @@ title = {{BlueROV2}},
 howpublished = "\url{https://bluerobotics.com/store/rov/bluerov2/}",
 note = "[Online; acessado em 16 de Agosto de 2021]"
 }
+@inproceedings{gazebo,
+  title={Design and use paradigms for gazebo, an open-source multi-robot simulator},
+  author={Koenig, Nathan and Howard, Andrew},
+  booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)(IEEE Cat. No. 04CH37566)},
+  volume={3},
+  pages={2149--2154},
+  organization={IEEE}
+}
+@ARTICLE{simulators-comparison,
+  author={Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
+  journal={IEEE Access},
+  title={A Review of Physics Simulators for Robotic Applications},
+  year={2021},
+  volume={9},
+  number={},
+  pages={51416-51431},
+  doi={10.1109/ACCESS.2021.3068769}
+}
