Add conclusion chap

--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \include{cap2-analise-de-requisitos}
 \include{cap3-projeto-conceitual}
 \include{cap4-simulacao}
+\include{cap5-conclusao}
 
 \newpage
 
