all chapters together, but missing reviewing

--- a/cap1-introducao.tex
+++ b/cap1-introducao.tex
@@ -16,7 +16,7 @@ Os objetivos específicos do trabalho são:
 \begin{enumerate}
 	\item Projetar um ROV para atuação em uma missão de resgate, com requisitos de funcionamento pré-estabelecidos.
 	\item Desenvolver e implementar, em ambiente simulado, algoritmos de comunicação subaquática.
-	\item Simular comportamento dinâmico, localização, navegação e comunicação do ROV.
+	\item Simular comportamento dinâmico, localização, mapeamento, navegação e comunicação do ROV.
 \end{enumerate}
 
 O escopo do trabalho está restrito à entrega de três relatórios, desenhos 3D e de fabricação e algoritmos desenvolvidos. A prototipação física, assim como testes experimentais do ROV em piscina ou mar estão fora do escopo desse trabalho.
@@ -31,7 +31,7 @@ A divisão dos relatórios será feita da seguinte maneira:
 \end{enumerate}
 \vspace{1.5mm}
  
-No Relatório I, que é este documento, será apresentada inicialmente uma análise de requisitos do sistema, matriz QFD (do inglês \textit{Quality Function Deployment}) para obtenção dos requisitos de projeto e matriz morfológica para seleção preliminar dos tipos de componentes do protótipo a ser simulado. Posteriormente será apresentado o projeto conceitual, que conterá: o \textit{design} proposto para o protótipo, os sensores embarcados e as principais funcionalidades que ele irá possuir. Por fim, será discutida uma estratégia para simulação do protótipo.
+No Relatório I, que é este documento, será apresentada inicialmente uma análise de requisitos do sistema, matriz QFD (do inglês \textit{Quality Function Deployment}) para obtenção dos requisitos de projeto e matriz morfológica para seleção preliminar dos tipos de componentes do protótipo a ser simulado. Posteriormente serão apresentados o projeto conceitual e as estratégias para validação do protótipo em ambiente simulado.
 
 No Relatório II será apresentado o projeto detalhado, com especificação dos componentes e sistema, juntamente com um cronograma para execução das tarefas.
 
