--- a/main.tex
+++ b/main.tex
@@ -19,12 +19,18 @@
 \include{cap2-analise-de-requisitos}
 \include{cap3-projeto-conceitual}
 \include{cap4-simulacao}
-\include{cap5-conclusao}
+%\include{cap5-conclusao}
 
 \newpage
 
+\appendix
+\include{appendixA}
+
+
 \bibliographystyle{unsrt}
 \bibliography{brov_bib}
+\addcontentsline{toc}{section}{Apêndices}
 \addcontentsline{toc}{section}{Referências}
+
 	
 \end{document}
