--- a/brov_bib.bib
+++ b/brov_bib.bib
@@ -13,28 +13,6 @@ title = {{Underwater Robots Fourth Edition}},
 url = {http://www.springer.com/series/5208},
 year = {2018}
 }
-@article{Paull2014,
-abstract = {Autonomous underwater vehicle (AUV) navigation and localization in underwater environments is particularly challenging due to the rapid attenuation of Global Positioning System (GPS) and radio-frequency signals. Underwater communications are low bandwidth and unreliable, and there is no access to a global positioning system. Past approaches to solve the AUV localization problem have employed expensive inertial sensors, used installed beacons in the region of interest, or required periodic surfacing of the AUV. While these methods are useful, their performance is fundamentally limited. Advances in underwater communications and the application of simultaneous localization and mapping (SLAM) technology to the underwater realm have yielded new possibilities in the field. This paper presents a review of the state of the art of AUV navigation and localization, as well as a description of some of the more commonly used methods. In addition, we highlight areas of future research potential. {\textcopyright} 2013 IEEE.},
-author = {Paull, Liam and Saeedi, Sajad and Seto, Mae and Li, Howard},
-doi = {10.1109/JOE.2013.2278891},
-file = {:C$\backslash$:/Users/rsq95/OneDrive/Rafael/MESTRADO MECATR{\^{O}}NICA UFBA/Disciplinas 2020.1/ENG633 - Sistemas Mecatr{\^{o}}nicos (2020.1)/Literature/AUV{\_}Navigation{\_}and{\_}Localization{\_}A{\_}Review.pdf:pdf},
-issn = {03649059},
-journal = {IEEE Journal of Oceanic Engineering},
-keywords = {Autonomous underwater vehicles (AUVs),marine navigation,simultaneous localization and mapping},
-number = {1},
-pages = {131--149},
-publisher = {IEEE},
-title = {{AUV navigation and localization: A review}},
-volume = {39},
-year = {2014}
-}
-@misc{Tigre2009,
-author = {Tigre},
-file = {:C$\backslash$:/Users/rsq95/OneDrive/Rafael/MESTRADO MECATR{\^{O}}NICA UFBA/Disciplinas 2020.1/ENG633 - Sistemas Mecatr{\^{o}}nicos (2020.1)/Literature/Cat{\'{a}}logo Tigre - Linha Rosc{\'{a}}vel.pdf:pdf},
-pages = {1--6},
-title = {{Ficha T{\'{e}}cnica - Linha Rosc{\'{a}}vel}},
-year = {2009}
-}
 @article{Erol-Kantarci2011,
 abstract = {The widespread adoption of the Wireless Sensor Networks (WSNs) in various applications in the terrestrial environment and the rapid advancement of the WSN technology have motivated the development of Underwater Acoustic Sensor Networks (UASNs). UASNs and terrestrial WSNs have several common properties while there are several challenges particular to UASNs that are mostly due to acoustic communications, and inherent mobility. These challenges call for novel architectures and protocols to ensure successful operation of the UASN. Localization is one of the fundamental tasks for UASNs which is required for data tagging, node tracking, target detection, and it can be used for improving the performance of medium access and network protocols. Recently, various UASN architectures and a large number of localization techniques have been proposed. In this paper, we present a comprehensive survey of these architectures and localization methods. To familiarize the reader with the UASNs and localization concepts, we start our paper by providing background information on localization, state-of-the-art oceanographic systems, and the challenges of underwater communications. We then present our detailed survey, followed by a discussion on the performance of the localization techniques and open research issues. {\textcopyright} 2005 IEEE.},
 author = {Erol-Kantarci, Melike and Mouftah, Hussein T. and Oktug, Sema},
@@ -65,6 +43,34 @@ title = {{Wireless communications}},
 volume = {19},
 year = {2018}
 }
+@article{Paull2014,
+abstract = {Autonomous underwater vehicle (AUV) navigation and localization in underwater environments is particularly challenging due to the rapid attenuation of Global Positioning System (GPS) and radio-frequency signals. Underwater communications are low bandwidth and unreliable, and there is no access to a global positioning system. Past approaches to solve the AUV localization problem have employed expensive inertial sensors, used installed beacons in the region of interest, or required periodic surfacing of the AUV. While these methods are useful, their performance is fundamentally limited. Advances in underwater communications and the application of simultaneous localization and mapping (SLAM) technology to the underwater realm have yielded new possibilities in the field. This paper presents a review of the state of the art of AUV navigation and localization, as well as a description of some of the more commonly used methods. In addition, we highlight areas of future research potential. {\textcopyright} 2013 IEEE.},
+author = {Paull, Liam and Saeedi, Sajad and Seto, Mae and Li, Howard},
+doi = {10.1109/JOE.2013.2278891},
+file = {:C$\backslash$:/Users/rsq95/OneDrive/Rafael/MESTRADO MECATR{\^{O}}NICA UFBA/Disciplinas 2020.1/ENG633 - Sistemas Mecatr{\^{o}}nicos (2020.1)/Literature/AUV{\_}Navigation{\_}and{\_}Localization{\_}A{\_}Review.pdf:pdf},
+issn = {03649059},
+journal = {IEEE Journal of Oceanic Engineering},
+keywords = {Autonomous underwater vehicles (AUVs),marine navigation,simultaneous localization and mapping},
+number = {1},
+pages = {131--149},
+publisher = {IEEE},
+title = {{AUV navigation and localization: A review}},
+volume = {39},
+year = {2014}
+}
+@misc{Tigre2009,
+author = {Tigre},
+file = {:C$\backslash$:/Users/rsq95/OneDrive/Rafael/MESTRADO MECATR{\^{O}}NICA UFBA/Disciplinas 2020.1/ENG633 - Sistemas Mecatr{\^{o}}nicos (2020.1)/Literature/Cat{\'{a}}logo Tigre - Linha Rosc{\'{a}}vel.pdf:pdf},
+pages = {1--6},
+title = {{Ficha T{\'{e}}cnica - Linha Rosc{\'{a}}vel}},
+year = {2009}
+}
+@misc{bluerov2,
+author = {Robotics, Blue},
+title = {{BlueROV2}},
+url = {https://bluerobotics.com/store/rov/bluerov2/},
+urldate = {2021-08-16}
+}
 @article{Rocha2014,
 author = {Rocha, Carlos R and Branco, Rog{\'{e}}rio M and Cruz, Lais A and Scholl, Marcos V and Cezar, Matheus M and Bicca, Felipe D},
 file = {:C$\backslash$:/Users/rsq95/OneDrive/Rafael/MESTRADO MECATR{\^{O}}NICA UFBA/Disciplinas 2020.1/ENG633 - Sistemas Mecatr{\^{o}}nicos (2020.1)/Literature/UnderwaterResearchPlatform.pdf:pdf},
@@ -72,27 +78,70 @@ number = {June 2016},
 title = {{Design Aspects Of An Open Platform For Underwater Robotics Experimental Research}},
 year = {2014}
 }
-@misc{bluerov2,
-author = {Robotics, Blue},
-title = {{BlueROV2}},
-howpublished = "\url{https://bluerobotics.com/store/rov/bluerov2/}",
-note = "[Online; acessado em 16 de Agosto de 2021]"
+
+@article{godi2021survey,
+	title={Survey on Simulators for Underwater Sensor Networks},
+	author={Godi, Geeta and others},
+	journal={Turkish Journal of Computer and Mathematics Education (TURCOMAT)},
+	volume={12},
+	number={13},
+	pages={1719--1728},
+	year={2021}
 }
-@inproceedings{gazebo,
-  title={Design and use paradigms for gazebo, an open-source multi-robot simulator},
-  author={Koenig, Nathan and Howard, Andrew},
-  booktitle={2004 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)(IEEE Cat. No. 04CH37566)},
-  volume={3},
-  pages={2149--2154},
-  organization={IEEE}
+
+@article{vieira2010redes,
+	title={Redes de sensores aqu{\'a}ticas},
+	author={Vieira, L and Loureiro, A and Fernandes, Antonio and Campos, Mario},
+	journal={XXVIII Simp{\'o}sio Brasileiro de Redes de Computadores e Sistemas Distribu{\'\i}dos, Gramado, RS, Brasil},
+	volume={1},
+	pages={199--240},
+	year={2010}
 }
-@ARTICLE{simulators-comparison,
-  author={Collins, Jack and Chand, Shelvin and Vanderkop, Anthony and Howard, David},
-  journal={IEEE Access},
-  title={A Review of Physics Simulators for Robotic Applications},
-  year={2021},
-  volume={9},
-  number={},
-  pages={51416-51431},
-  doi={10.1109/ACCESS.2021.3068769}
+
+
+@article{akyildiz2005underwater,
+	title={Underwater acoustic sensor networks: research challenges},
+	author={Akyildiz, Ian F and Pompili, Dario and Melodia, Tommaso},
+	journal={Ad hoc networks},
+	volume={3},
+	number={3},
+	pages={257--279},
+	year={2005},
+	publisher={Elsevier}
 }
+
+@misc{Wikipedia,
+	author = {Wikip{\'{e}}dia},
+	keywords = {sistema_mecatronico},
+	mendeley-groups = {Mestrado Mecatronica/Revisao bibliografica/cobertura_area},
+	mendeley-tags = {sistema_mecatronico},
+	title = {{Camada f{\'{i}}sica}},
+	url = {https://pt.wikipedia.org/wiki/Camada_f{\'{i}}sica},
+	urldate = {2021-08-18}
+}
+
+@article{shantaram2005challenges,
+	title={The Challenges of Building Scalable Mobile Underwater Wireless Sensor Networks for Aquatic Applications},
+	author={Shantaram, A and Beyenal, H and Veluchamy, R and Lewandowski, Z},
+	journal={Environ. Sci. Technol},
+	volume={39},
+	pages={5037--5042},
+	year={2005}
+}
+
+@article{das2016simulation,
+	title={Simulation tools for underwater sensor networks: a survey},
+	author={Das, Anjana P and Thampi, Sabu M},
+	journal={Network protocols and Algorithms},
+	volume={8},
+	number={4},
+	year={2016}
+}
+
+@techreport{montana2008auvnetsim,
+	title={AUVNetSim: A simulator for underwater acoustics networks},
+	author={Montana, Josep Miquel Jornet},
+	year={2008},
+	institution={Massachusetts Institute of Technology. Sea Grant College Program}
+}
+
