--- a/preambulo.tex
+++ b/preambulo.tex
@@ -14,6 +14,7 @@
 \usepackage{hyperref}
 \setmarginsrb{3 cm}{2.5 cm}{3 cm}{2.5 cm}{1 cm}{1.5 cm}{1 cm}{1.5 cm}
 \numberwithin{figure}{section}
+\numberwithin{table}{section}
 \title{Relatório I \\ [0.5 cm] Projeto Conceitual}
 
 \makeatletter
